# thumper

./: .gitignore  CHANGES.md  README.md  dune-project  thumper.opam
doc/: regression-workflow.md
examples/: bench_example.ml  dune  example.thumper
lib/: baseline.ml  baseline.mli  budget.ml  budget.mli  check.ml  check.mli  config.ml  config.mli  dune  metric.ml  metric.mli  ols.ml  ols.mli  run.ml  run.mli  sampler.ml  sampler.mli  table.ml  table.mli  thumper.ml  thumper.mli  thumper_cli.ml  thumper_cli.mli  thumper_output.ml  thumper_output.mli  thumper_tsv.ml  thumper_tsv.mli
test/: bench_fixture.ml  dune  test_baseline.ml  test_check.ml  test_cli.ml  test_machines.ml  test_ols.ml  test_thumper.ml
