(test
 (name test_thumper)
 (modules test_thumper)
 (libraries thumper windtrap))

(executable
 (name bench_fixture)
 (modules bench_fixture)
 (libraries thumper))

(test
 (name test_cli)
 (modules test_cli)
 (libraries thumper windtrap unix)
 (deps bench_fixture.exe))

(test
 (name test_check)
 (modules test_check)
 (libraries thumper windtrap))

(test
 (name test_machines)
 (modules test_machines)
 (libraries thumper windtrap unix)
 (deps bench_fixture.exe))

(test
 (name test_baseline)
 (modules test_baseline)
 (libraries thumper windtrap))

(test
 (name test_ols)
 (modules test_ols)
 (libraries thumper windtrap))
